fix images on mobile so they stretch full width

--- a/vocativ-darknet-microsite/client/styles/card.scss
+++ b/vocativ-darknet-microsite/client/styles/card.scss
@@ -8,6 +8,13 @@
     img {
       @include fill-parent;
       object-fit: cover;
+
+      // on mobile, stretch to full screen width
+      @include bp-under(breakpoint(medium)) {
+        position: relative;
+        width: 100vw !important;
+        left: -1rem;
+      }
     }
   }
 
